--- a/src/Vavatech.Shop/MetalDesignWpfClient/MainWindow.xaml
+++ b/src/Vavatech.Shop/MetalDesignWpfClient/MainWindow.xaml
@@ -66,7 +66,39 @@
 
             <StackPanel Margin="20">
 
+                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
 
+
+
+                    <materialDesign:PackIcon
+                        Width="32"
+                        Height="32"
+                        VerticalAlignment="Center"
+                        Kind="User" />
+
+                    <materialDesign:PopupBox
+                        Margin="10"
+                        PlacementMode="BottomAndAlignRightEdges"
+                        StaysOpen="False">
+                        <StackPanel Width="150">
+                            <Button Content="Settings" />
+                            <Button Content="Account" />
+                            <Button Content="Help" />
+                            <Separator />
+                            <Button Content="Logout" />
+                        </StackPanel>
+                    </materialDesign:PopupBox>
+
+
+
+                </StackPanel>
+
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="22">
+                    Design com WPF
+                </TextBlock>
 
                 <TextBlock
                     HorizontalAlignment="Center"
