--- a/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Views/SecondPageView.xaml
+++ b/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Views/SecondPageView.xaml
@@ -7,16 +7,78 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="SecondPageView"
     d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignWidth="800"    
     mc:Ignorable="d">
 
-    <Grid Background="DarkGreen">
+    <Page.Resources>
 
-        <TextBlock
+        <ControlTemplate x:Key="MyButtonTemplate" TargetType="Button">
+            <Grid>
+
+                <Border
+                    Padding="10"
+                    BorderBrush="DarkBlue"
+                    BorderThickness="3"
+                    CornerRadius="5">
+
+                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+                </Border>
+            </Grid>
+        </ControlTemplate>
+
+
+        <ControlTemplate x:Key="MyListBoxTemplate" TargetType="ListBox">
+
+            <Grid>
+
+                <Border
+                    Padding="10"
+                    BorderBrush="Blue"
+                    BorderThickness="3"
+                    CornerRadius="10">
+
+                    <ItemsPresenter />
+
+                </Border>
+
+            </Grid>
+
+        </ControlTemplate>
+    </Page.Resources>
+
+    <Grid>
+
+        <!--<TextBlock
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontSize="64"
             Foreground="White"
-            Text="Second Page View" />
+            Text="Second Page View" />-->
+
+        <StackPanel Margin="20">
+
+            <Button
+                Height="50"
+                Margin="20"
+                Template="{StaticResource MyButtonTemplate}">
+                Hello
+            </Button>
+
+            <ListBox Margin="20" Template="{StaticResource MyListBoxTemplate}">
+                <ListBoxItem>Item 1</ListBoxItem>
+                <ListBoxItem>Item 2</ListBoxItem>
+                <ListBoxItem>Item 3</ListBoxItem>
+
+                <ListBoxItem>Item 4</ListBoxItem>
+                <ListBoxItem>Item 5</ListBoxItem>
+                <ListBoxItem>Item 6</ListBoxItem>
+
+                <ListBoxItem>Item 7</ListBoxItem>
+                <ListBoxItem>Item 8</ListBoxItem>
+                <ListBoxItem>Item 9</ListBoxItem>
+            </ListBox>
+
+        </StackPanel>
     </Grid>
 </Page>
