--- a/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Views/SecondView.xaml
+++ b/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Views/SecondView.xaml
@@ -1,18 +1,29 @@
-﻿<UserControl x:Class="Vavatech.ViewModelFirst.WpfClient.Views.SecondView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Vavatech.ViewModelFirst.WpfClient.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="DarkGreen">
+﻿<UserControl
+    x:Class="Vavatech.ViewModelFirst.WpfClient.Views.SecondView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Vavatech.ViewModelFirst.WpfClient.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
-        <TextBlock Text="Second View" 
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center"
-                   FontSize="64"
-                   Foreground="White"
-                   />
+
+
+
+    <Grid>
+
+        <TextBlock
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="64"
+            Foreground="White"
+            Text="Second View" />
+
+
+
+
+
     </Grid>
 </UserControl>
