--- a/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Views/ShellView.xaml
@@ -11,6 +11,8 @@
     Title="ShellView"
     Width="800"
     Height="450"
+    Style="{StaticResource CustomWindowStyle}"
+    WindowStyle="None"
     mc:Ignorable="d">
 
     <Window.DataContext>
@@ -21,6 +23,19 @@
 
         <c:ViewModelConverter x:Key="ViewModelConverter" />
 
+        <Storyboard x:Key="OpenMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="GridMenu" Storyboard.TargetProperty="(FrameworkElement.Width)">
+                <EasingDoubleKeyFrame KeyTime="0" Value="70" />
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="200" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="CloseMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="GridMenu" Storyboard.TargetProperty="(FrameworkElement.Width)">
+                <EasingDoubleKeyFrame KeyTime="0" Value="200" />
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="70" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+
         <Style TargetType="Button">
             <Setter Property="Margin" Value="10" />
             <Setter Property="Width" Value="200" />
@@ -28,10 +43,38 @@
             <Setter Property="Foreground" Value="White" />
         </Style>
 
+        <Color x:Key="MyBlue">#052767</Color>
+        <Color x:Key="MyPurple">#3a0647</Color>
+
+        <SolidColorBrush x:Key="MyBlueBrush" Color="{StaticResource MyBlue}" />
+
+
+        <LinearGradientBrush x:Key="MyGradientBrush">
+            <GradientStop Color="{StaticResource MyBlue}" />
+            <GradientStop Offset="1" Color="{StaticResource MyPurple}" />
+        </LinearGradientBrush>
+
+
         <Style TargetType="MenuItem">
-            <!--<Setter Property="Height" Value="50" />-->
+            <Setter Property="Height" Value="50" />
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Margin" Value="10,0" />
+
+            <Style.Triggers>
+                <Trigger Property="IsHighlighted" Value="True">
+                    <Setter Property="Foreground" Value="Yellow" />
+                    <Setter Property="BorderBrush" Value="White" />
+                    <Setter Property="Background" Value="Red" />
+
+                </Trigger>
+
+                <Trigger Property="IsFocused" Value="True">
+                    <Setter Property="Foreground" Value="White" />
+                    <Setter Property="BorderBrush" Value="White" />
+                    <Setter Property="Background" Value="{StaticResource MyGradientBrush}" />
+
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
         <ControlTemplate x:Key="MyMenuItem" TargetType="{x:Type MenuItem}">
@@ -72,90 +115,137 @@
 
     </Window.Resources>
 
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonOpenMenu">
+            <BeginStoryboard Storyboard="{StaticResource OpenMenu}" />
+        </EventTrigger>
+        <!--<EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonCloseMenu">
+            <BeginStoryboard Storyboard="{StaticResource CloseMenu}"/>
+        </EventTrigger>-->
+    </Window.Triggers>
+
     <Grid>
 
 
 
         <DockPanel>
 
+            <!--<StackPanel DockPanel.Dock="Top">
+                <Button
+                    x:Name="Close"
+                    Width="50"
+                    Height="50"
+                    Command="{Binding Source={x:Static SystemCommands.CloseWindowCommand}}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
+                    Content="Close"
+                    IsTabStop="False"
+                    ToolTip="Close"
+                    WindowChrome.IsHitTestVisibleInChrome="True" />
+            </StackPanel>-->
 
 
-            <Menu
-                Width="200"
-                HorizontalAlignment="Left"
-                Background="DarkBlue"
-                DockPanel.Dock="Left"
-                Foreground="White">
 
-                <Menu.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel />
-                    </ItemsPanelTemplate>
-                </Menu.ItemsPanel>
+            <StackPanel Background="{StaticResource MyGradientBrush}" DockPanel.Dock="Left">
 
 
-                <materialDesign:PackIcon Kind="SmileyHappy" />
 
-                <MenuItem Command="{Binding ShowFirstViewCommand}" Header="First View">
-                    <MenuItem.Icon>
-                        <materialDesign:PackIcon Kind="Gambling" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                <Button
+                    x:Name="ButtonOpenMenu"
+                    Width="60"
+                    Height="60"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Background="{x:Null}"
+                    BorderBrush="{x:Null}"
+                    Foreground="#FF31577E"
+                    Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
+                    <materialDesign:PackIcon
+                        Width="25"
+                        Height="25"
+                        Kind="Menu" />
+                </Button>
 
-                <MenuItem Command="{Binding ShowSecondViewCommand}" Header="Second View">
-                    <MenuItem.Icon>
-                        <materialDesign:PackIcon Kind="User" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                <Menu
+                    x:Name="GridMenu"
+                    Width="49"
+                    HorizontalAlignment="Left"
+                    Background="{StaticResource MyGradientBrush}"
+                    Foreground="White">
 
-                <Separator />
 
-                <MenuItem Header="File" Template="{StaticResource MyMenuItem}">
-                    <MenuItem.Icon>
-                        <materialDesign:PackIcon Kind="File" />
-                    </MenuItem.Icon>
-                    <MenuItem
-                        Command="{Binding ShowViewCommand}"
-                        CommandParameter="Customers"
-                        Header="Show Customers" />
-                    <MenuItem
-                        Command="{Binding ShowViewCommand}"
-                        CommandParameter="Products"
-                        Header="Show Products" />
-                    <MenuItem
-                        Command="{Binding ShowViewCommand}"
-                        CommandParameter="Counter"
-                        Header="Show Counter" />
+
+                    <Menu.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel />
+                        </ItemsPanelTemplate>
+                    </Menu.ItemsPanel>
+
+
+
+
+                    <MenuItem Command="{Binding ShowFirstViewCommand}" Header="First View">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="Gambling" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+
+                    <MenuItem Command="{Binding ShowSecondViewCommand}" Header="Second View">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="User" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+
                     <Separator />
-                    <MenuItem Command="{Binding ExitCommand}" Header="Exit" />
-                </MenuItem>
 
-                <MenuItem Header="Edit">
-                    <MenuItem.Icon>
-                        <materialDesign:PackIcon Kind="Edit" />
-                    </MenuItem.Icon>
+                    <MenuItem Header="File">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="File" />
+                        </MenuItem.Icon>
+                        <MenuItem
+                            Command="{Binding ShowViewCommand}"
+                            CommandParameter="Customers"
+                            Header="Show Customers" />
+                        <MenuItem
+                            Command="{Binding ShowViewCommand}"
+                            CommandParameter="Products"
+                            Header="Show Products" />
+                        <MenuItem
+                            Command="{Binding ShowViewCommand}"
+                            CommandParameter="Counter"
+                            Header="Show Counter" />
+                        <Separator />
+                        <MenuItem Command="{Binding ExitCommand}" Header="Exit" />
+                    </MenuItem>
 
-                </MenuItem>
-                <MenuItem Header="View">
-                    <MenuItem.Icon>
-                        <materialDesign:PackIcon Kind="ViewAgenda" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    <MenuItem Header="Edit">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="Edit" />
+                        </MenuItem.Icon>
+
+                    </MenuItem>
+                    <MenuItem Header="View">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="ViewAgenda" />
+                        </MenuItem.Icon>
+                    </MenuItem>
 
 
-                <MenuItem Header="Help">
-                    <MenuItem.Icon>
-                        <materialDesign:PackIcon Kind="Help" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    <MenuItem Header="Help">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="Help" />
+                        </MenuItem.Icon>
+                    </MenuItem>
 
-                <MenuItem Header="Settings">
-                    <MenuItem.Icon>
-                        <materialDesign:PackIcon Kind="Settings" />
-                    </MenuItem.Icon>
-                </MenuItem>
+                    <MenuItem Header="Settings">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="Settings" />
+                        </MenuItem.Icon>
+                    </MenuItem>
 
-            </Menu>
+                </Menu>
+
+            </StackPanel>
 
 
 
